# vacasa

./: .editorconfig  .gitignore  .readthedocs.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  SECURITY.md  linter-requirements.txt  pyproject.toml  set_version.py  setup.cfg
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  feature.yml  question.yml
.github/workflows/: ci.yml  release.yml
django_select2/: __init__.py  apps.py  conf.py  forms.py  views.py
django_select2/static/django_select2/: django_select2.js
docs/: conf.py  django_select2.rst  extra.rst  index.rst
example/: requirements.txt
example/example/: settings.py
example/example/migrations/: 0001_initial.py
example/example/templates/example/: book_form.html
tests/: conftest.py  test_forms.py  test_views.py
tests/testapp/: forms.py  settings.py
tests/testapp/templates/: form.html
